<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uscrecapp_team28.Activity.BookingActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/booking_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="top|left"
            android:onClick="onClickMap"
            android:text="Back"
            android:textColor="#fff"
            android:alpha="0.7"/>
        <TextView
            android:id="@+id/timeslot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="Timeslots"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/refreshbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:onClick="onClickRefresh"
            android:text="Refresh"
            android:textColor="#fff"
            android:alpha="0.7"/>
    </LinearLayout>

    <TextView
        android:id="@+id/center_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text="Village"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/todaybutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Today"
            android:layout_marginRight="5dp"
            android:onClick="onClickToday"/>
        <Button
            android:id="@+id/tomorrowbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:text="Second"
            android:onClick="onClickSecond"/>
        <Button
            android:id="@+id/thirdbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Third"
            android:onClick="onClickThird"/>
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TrecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="4dp"
        android:scrollbars="vertical" />




</LinearLayout>