...
            android:layout_toEndOf="@+id/imageView"
            android:text="Remaining Spots: "
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/WaitButton"
            android:layout_width="57dp"
            android:layout_height="26dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onClickWait"
            android:text="Join Waitlist"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:translationX="45dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BookButton"
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onClickBook"
...
